# ChatKit-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: create-docker-image.yml  docker-build-publish.yml  master-test.yml  push-docker-aws.yml  rust.yml
client/: Cargo.toml
client/src/: WorkerMessage.rs  global_functions.rs  main.rs  segues.rs  select_operation.rs  settings.rs  state.rs  worker.rs  worker_message.rs
client/src/managers/: Network.rs  NetworkManagerMessage.rs  message.rs  mod.rs  network.rs
client/src/network/: mod.rs  network_connection.rs  server_writer_connection.rs
client/src/screens/: mod.rs
client/src/screens/connect_setup/: mod.rs  segues.rs  user_details_form.rs
client/src/screens/info_dialogue/: info_dialogue.rs  info_error_dialogue.rs  info_loading_panel.rs  mod.rs  segues.rs
client/src/screens/main_screen/: invalid_address_dialogue.rs  mod.rs  segues.rs  select_operation.rs  stream_failed.rs
client/src/test/: client_test.rs  mod.rs
docs/: index.md
example_plugin/: Cargo.toml
example_plugin/src/: example.rs  lib.rs
foundation/: Cargo.toml
foundation/src/: connection.rs  helpers.rs  lib.rs  prelude.rs
foundation/src/client/: mod.rs  network_connection.rs  server_reader_connection.rs  server_writer_connection.rs
foundation/src/encryption/: helpers.rs  mod.rs
foundation/src/event/: event.rs  event_result.rs  mod.rs  responder.rs
foundation/src/messages/: client.rs  network.rs
foundation/src/models/: message.rs
foundation/src/network/: mod.rs
foundation/src/networking/: json.rs  mod.rs  protobuf.rs
foundation/src/test/: connection_pair.rs  mod.rs
protocol/: Cargo.toml  build.rs
protocol/src/: lib.rs
protocol/src/proto/: connected.proto  messages.proto  mod.rs  network.proto
scripts/: test.lua
server/: Cargo.toml
server/src/: actix_server.rs  actor.rs  chat_manager.rs  client.rs  client_manager.rs  encryption.rs  event_type.rs  lib.rs  listener_manager.rs  main.rs  messages.rs  network_connection.rs  network_manager.rs  os_signal_manager.rs  plugin_manager.rs  prelude.rs  protobuf_listener.rs  server.rs  server_va.rs
server/src/bootstrapper/: bootstrapper.rs  builder.rs  mod.rs
server/src/chat/: mod.rs
server/src/client_management/: client.rs  client_manager.rs  messages.rs  mod.rs
server/src/client_management/chat_manager/: actor.rs  chat_manager.rs  message_type.rs  messages.rs  mod.rs
server/src/client_management/client/: actor.rs  client.rs  messages.rs  mod.rs
server/src/config_manager/: arg_fetcher.rs  builder.rs  config_manager.rs  messages.rs  mod.rs  types.rs
server/src/config_manager/arg_parser/: mod.rs
server/src/connection/: client_info.rs  client_thread.rs  connection_manager.rs  mod.rs
server/src/event/: IResponder.rs  event.rs  event_result.rs  mod.rs  responder.rs
server/src/lua/: builder.rs  client_lua.rs  client_manager_lua.rs  lua_manager.rs  mod.rs  server_lua.rs
server/src/network/: client_connection.rs  client_reader_connection.rs  client_writer_connection.rs  connection.rs  connection_initiator.rs  connection_manager.rs  listener.rs  mod.rs  network_connection.rs  network_manager.rs
server/src/network/connection/: actor.rs  messages.rs  mod.rs
server/src/network/connection_initiator/: actor.rs  messages.rs  mod.rs
server/src/network/json/: json_client_reader.rs  json_client_writer.rs  json_listener.rs  json_network_connection.rs  mod.rs
server/src/network/listener/: mod.rs
server/src/network/network_manager/: actor.rs  builder.rs  config.rs  messages.rs  mod.rs  network_manager.rs
server/src/network/protobuf/: mod.rs  protobuf_client_reader.rs  protobuf_client_writer.rs  protobuf_listener.rs  protobuf_network_connection.rs
server/src/plugin/: Plugin.rs  mod.rs  plugin.rs  plugin_entry.rs  plugin_interface.rs  plugin_manager.rs
server/src/prelude/: mod.rs  observer.rs
server/src/rhai/: builder.rs  mod.rs  rhai_manager.rs
server/src/scripting/: mod.rs  scriptable_client.rs  scriptable_client_manager.rs  scriptable_network_manager.rs  scriptable_server.rs
server/src/server/: builder.rs  config.rs  messages.rs  mod.rs  server.rs
serverctl/: Cargo.toml
src/: lib.rs  main.rs
src/app/: Traits.rs  bundle.rs  mod.rs
src/client_api/: mod.rs
src/client_management/: client_profile.rs
src/commands/: behaviors.rs  mod.rs
src/lib/: mod.rs
src/lib/Foundation/: mod.rs
src/lib/commands/: behaviors.rs  mod.rs
src/lib/foundation/: mod.rs
src/lib/server/: config.rs  mod.rs  server.rs  server_v3.rs
src/lib/server/client_management/: mod.rs  traits.rs
src/lib/server/client_management/client/: client_profile.rs  client_v3.rs  mod.rs  traits.rs
src/lib/server/network_manager/: mod.rs
src/protocols/: commands.rs
src/protocols/commands/: client.rs  client_info.rs  client_update.rs  connect.rs  disconnect.rs  info.rs  network.rs
src/server/: ServerV3.rs  mod.rs  server_profile.rs  server_v3.rs  utility.rs
src/server/client/: clientV3.rs  client_profile.rs  client_v3.rs  mod.rs
src/server/commands/: client_info.rs  client_update.rs  connect.rs  disconnect.rs  info.rs  mod.rs
src/server/ui/: About_Panel.rs  about_panel.rs  control_panel.rs  main_menu.rs  mod.rs  server_view_controller.rs
src/server_v2/: mod.rs
src/server_v2/client_v2/: mod.rs
src/server_v2/commands_v2/: mod.rs
