[package]
name = "rust-chat-server"
version = "0.1.5"
authors = ["Mitchell <mitchellhardie1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
uuid = "0.8"
crossbeam = "0.7"
crossbeam-channel = "0.4"
crossbeam-utils = "0.7"
crossbeam-queue = "0.2"
parking_lot = "0.10"
dashmap = "3.11.4"
rayon = "1.3.1"
zeroize = "1.1.0"
crossterm = "0.17.7"
clap = "3.0.0-beta.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
url = "2.2.0"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
