[package]
name = "rust-chat-server"
version = "0.1.5"
authors = ["Mitchell <mitchellhardie1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.3.1"
parking_lot = "0.11.1"
dashmap = "4.0.2"
rayon = "1.3.1"
zeroize = "1.1.0"
crossterm = "0.19.0"
clap = "2.33.3"
log = "0.4"
url = "2.2.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
