[workspace]
members = [
  'foundation',
  'server',
  'protocol',
  'client',
]

[workspace.dependencies]
# common data types
uuid = {version = "1.1.2", features = ["serde", "v4"]}

# maths
rand = "0.8.5"

# serialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async tokio
tokio = { version = "1.9.0", features = ["full"] }

# protobuf
bytes = "1.6.0"
prost = "0.12"
prost-build = { version = "0.12" }
