[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid.workspace = true
tokio.workspace = true
cursive = "0.20.0"
rand.workspace = true

bytes.workspace = true
prost.workspace = true

foundation = { path = '../foundation' }
