[package]
name = "foundation"
version = "0.1.0"
authors = ["Mitchell <mitchellhardie1@gmail.com>","michael-bailey <mickyb18a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
regex = "1"
url = "2.2.0"
openssl = "0.10"
base64 = "0.13.0"
zeroize = "1.1.0"
serde_json = "1.0"
futures = "0.3.16"
async-trait = "0.1.51"

serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.9.0", features = ["full"] }
uuid = {version = "0.8", features = ["serde", "v4"]}