[package]
name = "foundation"
version = "0.1.0"
authors = ["Mitchell <mitchellhardie1@gmail.com>","michael-bailey <mickyb18a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
chrono = {version = "0.4", features = ["serde", "rustc-serialize"] }
async-trait = "0.1.52"
regex = "1"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.3.1"
rayon = "1.2.0"
zeroize = "1.1.0"
log = "0.4"
url = "2.2.0"
futures = "0.3.16"
serde_json = "1.0"
openssl = "0.10"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }