[package]
name = "protocol"
version = "0.1.0"
authors = ["michael-bailey <mickyb18a@gmail.com>"]
edition = "2018"

[lib]

[dependencies]
chrono = "0.4"
uuid = {version = "1.1.2", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
zeroize = "1.1.0"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
async-trait = "0.1.52"
toml = "0.8.8"

# prost setup
bytes.workspace = true
prost.workspace = true

[build-dependencies]
prost-build.workspace = true

