[package]
name = "server"
version = "0.1.0"
authors = ["michael-bailey <mickyb18a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# name = "serverlib"
# path = "src/lib.rs"

# [[bin]]
# name = "server"
# path = "src/main.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = {version = "4.4.8", features = ["derive"]}
uuid = {version = "1.1.2", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8.0"
crossbeam-channel = "0.5.0"
zeroize = "1.1.0"
openssl = "0.10.33"
tokio = { version = "1.9.0", features = ["full"] }
futures = "0.3.16"
async-trait = "0.1.52"
actix = "0.13"
rhai = {version = "1.7.0"}
mlua = { version = "0.9.2", features=["lua54", "async", "serde", "macros", "vendored"] }
libloading = "0.8.1"
toml = "0.8.8"
aquamarine = "0.3.2"
tokio-stream = "0.1.9"

foundation = {path = '../foundation'}